@@ -5,9 +5,7 @@ import java.util.List;
 import com.mojang.datafixers.util.Pair;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
-import net.fabricmc.fabric.api.renderer.v1.model.ModelHelper;
 
-import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.model.*;
 import net.minecraft.client.render.RenderLayer;
 import net.minecraft.client.render.VertexConsumer;
@@ -15,6 +13,7 @@ import net.minecraft.client.render.VertexConsumerProvider;
 import net.minecraft.client.render.block.entity.BlockEntityRenderer;
 import net.minecraft.client.render.block.entity.BlockEntityRendererFactory;
 import net.minecraft.client.util.math.MatrixStack;
+import net.minecraft.registry.Registries;
 import net.minecraft.util.DyeColor;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.RotationAxis;
@@ -58,8 +57,7 @@ public class RoundelBlockEntityRenderer
             float[] fs = pair.getSecond().getColorComponents();
             if (pair.getFirst().equals(RoundelPatterns.BASE)) {
                 Identifier dynamicTex = pair.getFirst().usesDynamicTexture() && roundelBlockEntity.getDynamicTextureBlockState() != null ?
-                        MinecraftClient.getInstance().getBlockRenderManager()
-                                .getModel(roundelBlockEntity.getDynamicTextureBlockState()).getQuads(roundelBlockEntity.getDynamicTextureBlockState(), ModelHelper.faceFromIndex(0), null).get(0).getSprite().getAtlasId() :
+                        Registries.BLOCK.getId(roundelBlockEntity.getDynamicTextureBlockState().getBlock()).withPrefixedPath("textures/block").withSuffixedPath(".png") : pair.getFirst().texture();
                         pair.getFirst().texture();
                 modelPart.render(matrices, vertexConsumers.getBuffer(RenderLayer.getEntityCutout(dynamicTex)),
                         pair.getFirst().emissive() ? 0xf000f0 : light, overlay, fs[0], fs[1], fs[2], 1.0f);
